<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center|top"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_100dp"
        android:textSize="@dimen/text_30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:layout_margin="@dimen/dimen_20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:layout_marginBottom="@dimen/dimen_5dp"
            app:boxStrokeColor="@color/colorPrimaryDark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/colorBlack"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete"
                android:singleLine="true"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginBottom="@dimen/dimen_5dp"
            app:boxStrokeColor="@color/colorPrimaryDark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/colorBlack"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/sharp_corner"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:layout_margin="@dimen/dimen_5dp"
            android:textSize="@dimen/text_18sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_margin="@dimen/dimen_5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sign_up_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:gravity="start"
                android:paddingStart="@dimen/dimen_5dp"
                android:paddingEnd="@dimen/dimen_0dp"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/forgot_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:paddingStart="@dimen/dimen_0dp"
                android:paddingEnd="@dimen/dimen_5dp"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:gravity="end"
                android:textColor="@color/colorBlack"/>

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/view_progress_bar"/>

</FrameLayout>